Added DTOs,DATA, Files and Cosmos DB Updated UI added unit test

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "CosmosDbSettings": {
+    "ConnectionString": "<your_connection_string_here>",
+    "DatabaseName": "<your_database_name_here>",
+    "ContainerName": "<your_container_name_here>"
   }
 }
