--- a/Capital.csproj
+++ b/Capital.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.40.0-preview.1" />
+  </ItemGroup>
+
 </Project>
